K8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-blue
spec:
    selector:
        matchLabels:
        app: nginx-blue
    template:
      metadata:
          labels:
            app: nginx-blue
      spec:
          containers:
          - name: nginx-blue
            image: nuteer/nginx:blue
            ports:
            - containerPort: 80
