K8s/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-green
spec:
    selector:
        matchLabels:
            app: nginx-green
    template:
        metadata:
            labels:
                app: nginx-green
        spec:
            containers:
            - name: nginx-green
              image: nuteer/nginx:green
              ports:
              - containerPort: 80
