K8s/services-nuteer.yaml
apiVersion: v1
kind: Service
metadata:
    name: green-service
    annotations:
        dev.nuteer.com/auto-ingress: "true"
spec:
    selector:
        app: green
    ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: blue-service
    annotations:
        dev.nuteer.com/auto-ingress: "true"    
spec:
    selector:
        app: blue
    ports:
    - port: 80
      targetPort: 80
