K8s/ingress-sub.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: subdominio
spec:
    rules:
    - host: blue.k3s-homelab.local
      http:
        paths:
        - backend:
            serviceName: nginx-blue
            servicePort: 80
    - host: green.k3s-homelab.local
      http:
        paths:
        - backend:
            serviceName: nginx-green
            servicePort: 80
